--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="ExpenseTracker.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <HeadOutlet />
 </head>
 
