--- a/Components/ExpenseForm.razor
+++ b/Components/ExpenseForm.razor
@@ -38,7 +38,7 @@ else
                 }
             </select>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">@SubmitButtonText</button>
+        <button type="submit" class="btn btn-success mt-3">@SubmitButtonText</button>
     </form>
 }
 
