--- a/Components/ExpensesList.razor
+++ b/Components/ExpensesList.razor
@@ -33,8 +33,8 @@ else
                     <td>@(expense.Planned ? "Planned" : "Unplanned")</td>
                     <td>@expense.Category?.Name</td>
                     <td>
-                        <button @onclick="() => EditExpense(expense.Id)">Edit</button>
-                        <button @onclick="() => DeleteExpense(expense.Id)">Delete</button>
+                        <button @onclick="() => EditExpense(expense.Id)" class="btn btn-primary">Edit</button>
+                        <button @onclick="() => DeleteExpense(expense.Id)" class="btn btn-danger">Delete</button>
                     </td>
                 </tr>
             }
