--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -32,27 +32,27 @@
         </div> *@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="categories">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categories
+                <span class="bi bi-tags-fill" aria-hidden="true"></span> Categories
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="expenses">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Expenses
+                <span class="bi bi-receipt-cutoff" aria-hidden="true"></span> Expenses
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="expenses/new">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AddExpense
+                <span class="bi bi-plus-circle-fill" aria-hidden="true"></span> Add Expense
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="incomes">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Incomes
+                <span class="bi bi-currency-dollar" aria-hidden="true"></span> Incomes
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="incomes/new">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AddIncomes
+                <span class="bi bi-plus-circle" aria-hidden="true"></span> Add Incomes
             </NavLink>
         </div>
     </nav>
