--- a/Components/IncomeForm.razor
+++ b/Components/IncomeForm.razor
@@ -28,7 +28,7 @@
             }
         </select>
     </div>
-    <button type="submit" class="btn btn-primary mt-3">@SubmitButtonText</button>
+    <button type="submit" class="btn btn-success mt-3">@SubmitButtonText</button>
     </form>
 
 
